--- a/assets/css/Floating-Button.css
+++ b/assets/css/Floating-Button.css
@@ -36,3 +36,76 @@
   margin-top: 15px;
 }
 
+@media (max-width: 360px) {
+  .price2 {
+    float: right;
+    font-weight: 500;
+    font-size: 0.5em;
+  }
+}
+
+@media (min-width: 1200px) {
+  .price2 {
+    float: right;
+    font-weight: 500;
+    font-size: 0.7em;
+  }
+}
+
+.price {
+  float: right;
+  font-weight: 500;
+  font-size: 0.5em;
+}
+
+@media (min-width: 300px) {
+  .check {
+    margin: auto;
+    max-width: 600px;
+  }
+}
+
+*, *::before, *::after {
+  box-sizing: border-box;
+}
+
+.item-name {
+  float: left;
+}
+
+.item-description {
+  float: left;
+}
+
+.title {
+  padding-top: 0.5em;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.row {
+  margin: auto;
+}
+
+.regis {
+  float: left;
+  margin-left: 10px;
+}
+
+.d {
+  padding-bottom: 1em;
+}
+
+.e {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.img1 {
+  max-width: 50%;
+}
+
+.price1 {
+  font-size: medium;
+}
+
