--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -717,3 +717,8 @@ body {
   --bs-gradient: linear-gradient(180deg, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0));
 }
 
+.link {
+  float: right;
+  margin: auto;
+}
+
